prometheus-operator/1.1-prom-operator-bundle.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: appmon-prometheus-operator
    app.kubernetes.io/version: v0.34.0
  name: appmon-prometheus-operator
  namespace: appmon
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: appmon-prometheus-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/name: appmon-prometheus-operator
        app.kubernetes.io/version: v0.34.0
    spec:
      containers:
      - args:
        - -deny-namespaces=openshift-monitoring
        - --logtostderr=true
        - --config-reloader-image=docker.io/dimssss/configmap-reload:v0.0.1
        - --prometheus-config-reloader=docker.io/dimssss/prometheus-config-reloader:v0.34.0
        image: docker.io/dimssss/prometheus-operator:v0.34.0
        name: appmon-prometheus-operator
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
      nodeSelector:
        beta.kubernetes.io/os: linux
      serviceAccountName: appmon-prometheus-operator
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: prometheus-operator
    app.kubernetes.io/version: v0.34.0
  name: appmon-prometheus-operator
  namespace: appmon
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: prometheus-operator
