prometheus-operator/2.3-prom-service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    appmon: service-yes
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: prometheus
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus
  namespace: appmon
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: prometheus
    weight: 100
