prometheus-operator/3.2-alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: appmon-alertmanager
spec:
  ports:
  - name: web
    port: 9093
    protocol: TCP
    targetPort: web
  selector:
    alertmanager: appmon-alertmanager
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: appmon-alertmanager
  namespace: appmon
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: appmon-alertmanager
---
# Use the following for creating an AlertManager secret
# kubectl create secret generic alertmanager-example --from-file=alertmanager.yaml
#global:
#  resolve_timeout: 5m
#route:
#  group_by: ['job']
#  group_wait: 30s
#  group_interval: 5m
#  repeat_interval: 12h
#  receiver: 'webhook'
#receivers:
#- name: 'webhook'
#  webhook_configs:
#  - url: 'http://alertmanagerwh:30500/'
